Changes from jTDS 1.2
=====================

12/05/2005 - Alin Sinpalean
 o Applied Mike's fix for a bug related to [1368058] Calling StoredProcedure
   with functions (identifiers containing special characters not parsed).

11/25/2005 - Alin Sinpalean
 o Corrected bug [1358059] Memory leak in add/remove statement. The remove
   statement logic did not remove the WeakReference if the Statement had been
   garbage collected.
 o Corrected an issue in TdsData causing CHAR columns containing single blanks
   to be returned as zero length strings.
 o Removed redundand call to checkClosed() in TdsCore.
 o Removed duplicate entries from Charsets.properties.

11/23/2005 - Alin Sinpalean
 o Made a few modifications to the test suite to accomodate changes in SQL
   Server 2005.

11/09/2005 - Alin Sinpalean
 o Corrected bug [1351891] Using JtdsCallableStatement.setFloat causes
   SQLException. findParameter() was called as if to retrieve parameter values
   from the setByte(), setDouble() and setFloat() methods, which caused the
   parameter not to be found.

===============================================================================
10/08/2005 - jTDS 1.2 released
===============================================================================

Changes from jTDS 1.1
=====================

11/03/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1346086] Problem with DATABASE name change on
   Sybase.
 o Applied patch [1250393] modify getJdbcType() to handle subclass of basic
   JDBC types, submitted by  Joel Schneider (cognophile).
 o Corrected a minor DatabaseMetaData error: supportsTransactionIsolationLevel
   returned true for TRANSACTION_NONE or any invalid value.

10/31/2005 - Alin Sinpalean
 o Corrected bug in JtdsDatabaseMetaData.getBestRowIdentifier(). Statement was
   closed, causing errors when using the returned result set.

10/27/2005 - Mike Hutchinson
 o Fixed bug "[1305275] Cursor opens fails when cursor threshold <> -1" by
   amending MSCursorResultSet.